# video_classifier

./: .gitignore  README.md  categories.json  main.py  pyproject.toml  requirements.txt
tests/: test_classifier.py
video_classifier/: classifier.py  cli.py  extractor.py
